Fixed alignment of icons in Manual overview page.

--- a/tool/admin/www/resources/scss/layout.scss
+++ b/tool/admin/www/resources/scss/layout.scss
@@ -181,6 +181,13 @@ a.button {
     margin-left: 1.5em;
   }
 
+  .table-overview {
+    tr td:first-child {
+      min-width: 110px;
+      text-align: center;
+    }
+  }
+
   #breadcrumb {
     position: absolute;
     top: $line - 5px;
